// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base components / bc-input Default smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
>
`;

exports[`base components / bc-input Disabled smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
       disabled="disabled"
>
`;

exports[`base components / bc-input ErrorDefault smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
       errored="true"
>
`;

exports[`base components / bc-input ErrorFocus smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
       errored="true"
>
`;

exports[`base components / bc-input Focus smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
>
`;

exports[`base components / bc-input Hover smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
>
`;

exports[`base components / bc-input Mobile smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
>
`;

exports[`base components / bc-input Tablet smoke-test 2`] = `
<input data-v-1a110ac2
       type="text"
       class="default hover focus"
       placeholder="default data"
>
`;
